snoarQube评估代码：一些bug修改